// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should fetch assetList data only where needed 1`] = `
Array [
  Object {
    "Ancestry": "",
    "CharacterId": "XYZ",
    "Characters": Array [],
    "Description": Array [
      "Test One. ",
    ],
    "EphemeraId": "ROOM#MNO",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "MNO",
    "tag": "Room",
  },
  Object {
    "Ancestry": "",
    "CharacterId": "QRS",
    "Characters": Array [],
    "Description": Array [
      "Test Two. ",
    ],
    "EphemeraId": "ROOM#TUV",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "TUV",
    "tag": "Room",
  },
]
`;

exports[`render should fetch state data only where needed 1`] = `
Array [
  Object {
    "Ancestry": "",
    "CharacterId": "XYZ",
    "Characters": Array [],
    "Description": Array [
      "Test One. ",
    ],
    "EphemeraId": "ROOM#MNO",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "MNO",
    "tag": "Room",
  },
  Object {
    "Ancestry": "",
    "CharacterId": "QRS",
    "Characters": Array [],
    "Description": Array [
      "Test Two. ",
    ],
    "EphemeraId": "ROOM#TUV",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "TUV",
    "tag": "Room",
  },
]
`;

exports[`render should render maps 1`] = `
Array [
  Object {
    "CharacterId": "QRS",
    "EphemeraId": "MAP#MNO",
    "MapId": "MNO",
    "Name": "Grand Bazaar",
    "fileURL": "test.png",
    "rooms": Object {
      "BASE#fountainSquare": Object {
        "EphemeraId": "ROOM#XYZ",
        "exits": Array [
          Object {
            "name": "library",
            "to": "BASE#library",
          },
        ],
        "name": Array [
          "Fountain Square",
        ],
        "x": 0,
        "y": 100,
      },
      "BASE#library": Object {
        "EphemeraId": "ROOM#Library",
        "exits": undefined,
        "x": 0,
        "y": -100,
      },
    },
    "type": "Map",
  },
]
`;

exports[`render should render spacing around tags 1`] = `
Array [
  Object {
    "Ancestry": "",
    "CharacterId": "QRS",
    "Characters": Array [],
    "Description": Array [
      "Test ",
      Object {
        "key": "testOne",
        "tag": "Link",
      },
      " ",
      Object {
        "key": "testTwo",
        "tag": "Link",
      },
      "-attached",
    ],
    "EphemeraId": "ROOM#MNO",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "MNO",
    "tag": "Room",
  },
]
`;

exports[`render should render when mapValueOnly set true 1`] = `
Array [
  Object {
    "Ancestry": "",
    "CharacterId": "QRS",
    "EphemeraId": "ROOM#MNO",
    "Exits": Array [
      Object {
        "Name": "vortex",
        "RoomId": "VORTEX",
        "Visibility": "Public",
      },
    ],
    "Name": "Test One. Test Two. ",
    "RoomId": "MNO",
    "tag": "Room",
  },
]
`;

exports[`render should render with no provided state data 1`] = `
Array [
  Object {
    "Ancestry": "",
    "CharacterId": "QRS",
    "Characters": Array [],
    "Description": Array [
      "Test One. ",
    ],
    "EphemeraId": "ROOM#MNO",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "MNO",
    "tag": "Room",
  },
]
`;

exports[`render should render with provided state data 1`] = `
Array [
  Object {
    "Ancestry": "",
    "CharacterId": "QRS",
    "Characters": Array [],
    "Description": Array [
      "Test One. ",
    ],
    "EphemeraId": "ROOM#MNO",
    "Exits": Array [],
    "Features": Array [],
    "Name": "",
    "RoomId": "MNO",
    "tag": "Room",
  },
]
`;
